infra/victoria-metrics/grafana-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.wilsonfi.dev`)
      kind: Rule
      services:
        - name: victoriametrics-k8s-stack-grafana
          port: 80
